--- a/style.css
+++ b/style.css
@@ -35,17 +35,17 @@ body.light::before{
 }
 
 h1{
-    font-size:2rem;
+    font-size:1.8rem;
     line-height:1.3;
 }
 
 h2{
-    font-size:1.7rem;
+    font-size:1.5rem;
     line-height:1.3;
 }
 
 .text{
-    font-size:1.5rem;
+    font-size:1.2rem;
     line-height:1.5;
     margin:10px 0;
 }
@@ -58,7 +58,7 @@ h2{
     min-height: 100vh;
     padding:30px;
     width: 100%;
-    max-width: 600px; 
+    max-width: 700px; 
     margin: 0 auto;
     text-align:center;
     flex-direction:column;
@@ -85,13 +85,13 @@ h2{
 }
 
 button{
-    margin: 80px 10px;
+    margin: 35px 10px;
     padding: 20px 45px; 
     border:none;
     border-radius:40px;
     background:#9adfc2;
     color:#144;
-    font-size:25px;
+    font-size:20px;
     cursor:pointer;
 }
 
@@ -127,7 +127,14 @@ button .no-btn{
 }
 
 .gif{
-    margin-bottom: 65px;
+    margin-top: 10px;
+    margin-bottom: 35px;
+    width:100%;
+    max-width:500px;
+}
+
+.tenor-gif-embed{
+    width:100% !important;
 }
 
 .sticker{
@@ -178,22 +185,30 @@ button .no-btn{
 
 /* --- Media query untuk phone kecil --- */
 @media (max-width: 480px){
-    h1 { font-size: 2.2rem; }
-    h2 { font-size: 1.8rem; }
-    .text { font-size: 1.5rem; }
+    h1 { font-size: 1.5rem; }
+    h2 { font-size: 1.5rem; }
+    .text { font-size: 1rem; }
     button { padding: 12px 35px; font-size: 16px; }
     .sticker-frame { width: 90vw; height: 90vw; }
+    .gif{
+        margin-top: 10px;
+        margin-bottom: 15px;
+        max-width:300px;
+    }
 }
 
 @media (max-width: 360px){
-    h1 { font-size: 2rem; }
+    h1 { font-size: 1.5rem; }
     h2 { font-size: 1.5rem; }
-    .text { font-size: 1.3rem; }
+    .text { font-size: 1rem; }
     button { padding: 12px 30px; font-size: 15px; }
     .sticker-frame { width: 80vw; height: 80vw; }
+    .gif{
+        margin-top: 10px;
+        margin-bottom: 15px;
+        max-width:300px;
+    }
 }
-
-
 
 
 
