--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ button .no-btn{
     h1 { font-size: 1.5rem; }
     h2 { font-size: 1.5rem; }
     .text { font-size: 1rem; }
-    button { padding: 12px 35px; font-size: 16px; }
+    button { padding: 12px 15px; margin: 20px 5px; font-size: 16px; }
     .sticker-frame { width: 90vw; height: 90vw; }
     .gif{
         margin-top: 10px;
@@ -201,7 +201,7 @@ button .no-btn{
     h1 { font-size: 1.5rem; }
     h2 { font-size: 1.5rem; }
     .text { font-size: 1rem; }
-    button { padding: 12px 30px; font-size: 15px; }
+    button { padding: 12px 15px; margin: 20px 5px; font-size: 15px; }
     .sticker-frame { width: 80vw; height: 80vw; }
     .gif{
         margin-top: 10px;
@@ -209,6 +209,7 @@ button .no-btn{
         max-width:300px;
     }
 }
+
 
 
 
